[package]
name = "hello_world"
version = "0.1.0"
authors = ["rust"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
eframe = { package = "eframe", version= "0.22.0", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = "0.10"
